# amazon-s3-gst-plugin

./: .gitignore  .travis.yml  Amazon-S3-Plugin.nuspec  Amazon-S3-Plugin.targets  CMakeLists.txt  CONTRIBUTING.md  README.md  amazon-s3-gst-plugin.nuspec  amazon-s3-gst-plugin.targets  meson.build  vcpkg.json
.github/workflows/: build-windows.yml  c-cpp.yml
pkgconfig/: gstreamer-aws.pc.in  meson.build
src/: gstawsapihandle.cpp  gstawsapihandle.hpp  gstawscredentials.cpp  gstawscredentials.h  gstawscredentials.hpp  gstawsutils.cpp  gstawsutils.hpp  gsts3downloader.cpp  gsts3downloader.h  gsts3elements.c  gsts3multipartuploader.cpp  gsts3multipartuploader.h  gsts3sink.c  gsts3sink.h  gsts3uploader.c  gsts3uploader.h  gsts3uploaderconfig.h  gsts3uploaderpartcache.hpp  meson.build
tests/: meson.build
tests/check/: meson.build  s3sink-cached.cpp  s3sink.c  uploaderpartcache.cpp
tests/check/include/: push_bytes.h  testcachedloaders.hpp  testcacheduploader.hpp  testdownloader.h  testuploader.h
